--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -10,3 +10,9 @@
 .container~.container {
     margin-top: 3rem;
 }
+@media screen and (max-width: 768px) {
+    .container {
+      width: 100%;
+    }
+  }
+  
