--- a/src/_typography.scss
+++ b/src/_typography.scss
@@ -21,3 +21,12 @@ h5 {
 h6 {
     font-size: 1.2rem;
 }
+@media screen and (max-width: 768px) {
+    h1 {
+      font-size: 2rem;
+    }
+  }
+  h1 {
+    @include responsive-text(2rem, 3rem);
+  }
+  
